--- a/Child-Nutrition/Child-Nutrition.ipynb
+++ b/Child-Nutrition/Child-Nutrition.ipynb
@@ -10,10 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "924a24ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Your Name : Peter Parker\n",
+      "Enter your Age : 7\n",
+      "Enter your Height : 45\n",
+      "Enter your Weight : 60\n",
+      "Enter your Milk intake : 300\n",
+      "Enter your Vegetable intake : 300\n",
+      "Enter your Meat intake : 200\n",
+      "Enter your Lentils intake : 100\n",
+      "Enter your Egg intake : 300\n",
+      "Enter your Rice intake : 300\n",
+      "BMI of  Peter Parker  is 20.83  and he (she) is Healthy\n",
+      "The Daily calorie consumption of Peter Parker is 1809.0 and he (she) is not undernourished\n"
+     ]
+    }
+   ],
    "source": [
     "#creating function for BMI Calculator \n",
     "def Bmical(a, b):\n",
@@ -28,7 +47,6 @@
     "ht= int(input(\"Enter your Height : \"))\n",
     "wg= int(input(\"Enter your Weight : \"))\n",
     "\n",
-    "print(\"Hello \",name,\" Your age is \",age,\" and Weight & Height is \",wg,\"lbs \",ht,\"inches\" )\n",
     "bmi = Bmical(wg, ht)\n",
     "\n",
     "\n",
@@ -46,30 +64,38 @@
     "calin= milk*(1)+ veg*(85/100)+  meat*(143/100) + lent*(113/100)+ egg*(155/100)+ rice*(130/100) \n",
     "\n",
     "if(bmi< 16):\n",
-    "    print(\"BMI of \",name,\" is\",bmi,\" and he/she is\", \"Severely Underweight\")\n",
+    "    print(\"BMI of \",name,\" is\",bmi,\" and he (she) is\", \"Severely Underweight.\")\n",
     "elif(bmi>=16 and bmi<18.5):\n",
-    "    print(\"BMI of \",name,\" is\",bmi,\" and he/she is\", \"Underweight\")\n",
+    "    print(\"BMI of \",name,\" is\",bmi,\" and he (she) is\", \"Underweight.\")\n",
     "elif(bmi>=18.5 and bmi<25):\n",
-    "     print(\"BMI of \",name,\" is\",bmi,\" and he/she is\", \"Healthy\" )\n",
+    "     print(\"BMI of \",name,\" is\",bmi,\" and he (she) is\", \"Healthy.\" )\n",
     "elif(bmi>=25 and bmi<30):\n",
-    "    print(\"BMI of \",name,\" is\",bmi,\" and he/she is\", \"Overweight\" )\n",
+    "    print(\"BMI of \",name,\" is\",bmi,\" and he (she) is\", \"Overweight.\" )\n",
     "else:\n",
-    "    print(\"BMI of \",name,\" is\",bmi,\" and he/she is\", \"Obese\" )\n",
+    "    print(\"BMI of \",name,\" is\",bmi,\" and he (she) is\", \"Obese.\" )\n",
     "    \n",
     "if(age>=0 and age<2 and calin<800):\n",
-    "    print(\"The Daily calorie consumption of \",name,\" is \",calin,\" and he/she is not nourished\")\n",
+    "    print(\"The Daily calorie consumption of \",name,\" is \",calin,\" and he (she) is undernourished.\")\n",
     "elif(age>=0 and age<2 and calin>=800):\n",
-    "    print(\"The Daily calorie consumption of \",name,\" is \",calin,\" and he/she is nourished\")\n",
+    "    print(\"The Daily calorie consumption of \",name,\" is \",calin,\" and he (she) is not undernourished.\")\n",
     "elif(age>=2 and age<4 and calin<1400):\n",
-    "    print(\"The Daily calorie consumption of\",name,\"is \",calin,\"and he/she is not nourished\")\n",
+    "    print(\"The Daily calorie consumption of\",name,\"is \",calin,\"and he (she) is undernourished.\")\n",
     "elif(age>=2 and age<4 and calin>=1400):\n",
-    "    print(\"The Daily calorie consumption of\",name,\"is\",calin,\"and he/she is nourished\")\n",
+    "    print(\"The Daily calorie consumption of\",name,\"is\",calin,\"and he (she) is not undernourished.\")\n",
     "elif(age>=4 and age<8 and calin<1800):\n",
-    "    print(\"The Daily calorie consumption of\",name,\"is\",calin,\"and he/she is not nourished\")   \n",
+    "    print(\"The Daily calorie consumption of\",name,\"is\",calin,\"and he (she) is undernourished.\")   \n",
     "elif(age>=4 and age<8 and calin>1800):\n",
-    "    print(\"The Daily calorie consumption of\",name,\"is\",calin,\"and he/she is nourished\")\n",
+    "    print(\"The Daily calorie consumption of\",name,\"is\",calin,\"and he (she) is not undernourished.\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9f6e5c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
